feat: add convert API
